Banner fully not Complete

--- a/index.html
+++ b/index.html
@@ -184,5 +184,137 @@
       </div>
     </header>
     <!-- Header Stop -->
+    <!-- Banner Start -->
+    <section>
+      <div class="container">
+        <div class="carousel w-full h-[550px]">
+          <!-- slide 1 -->
+          <div id="slide1" class="carousel-item relative w-full rounded-2xl">
+            <!-- slide img -->
+            <img class="w-full" src="./Images/1.png" alt="Banner 1" />
+            <!-- slide content -->
+            <div
+              class="flex flex-col gap-4 bg-website-black p-8 rounded-2xl absolute bottom-8 right-8 max-w-[500px]"
+            >
+              <h2 class="text-white font-extrabold text-2xl">
+                Meet all the heroes from the field
+              </h2>
+              <p class="text-white/60 font-medium">
+                Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+                turpis placerat dolor. Purus urna in sit nullam proin.
+              </p>
+            </div>
+            <div
+              class="absolute flex gap-8 transform -translate-y-1/2 bottom-8 left-8"
+            >
+              <a
+                href="#slide4"
+                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                >❮</a
+              >
+              <a
+                href="#slide2"
+                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                >❯</a
+              >
+            </div>
+          </div>
+          <!-- slide 2 -->
+          <div id="slide1" class="carousel-item relative w-full rounded-2xl">
+            <!-- slide img -->
+            <img class="w-full" src="./Images/2.png" alt="Banner 2" />
+            <!-- slide content -->
+            <div
+              class="flex flex-col gap-4 bg-website-black p-8 rounded-2xl absolute bottom-8 right-8 max-w-[500px]"
+            >
+              <h2 class="text-white font-extrabold text-2xl">
+                Meet all the heroes from the field
+              </h2>
+              <p class="text-white/60 font-medium">
+                Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+                turpis placerat dolor. Purus urna in sit nullam proin.
+              </p>
+            </div>
+            <div
+              class="absolute flex gap-8 transform -translate-y-1/2 bottom-8 left-8"
+            >
+              <a
+                href="#slide1"
+                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                >❮</a
+              >
+              <a
+                href="#slide3"
+                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                >❯</a
+              >
+            </div>
+          </div>
+          <!-- slide 3 -->
+          <div id="slide1" class="carousel-item relative w-full rounded-2xl">
+            <!-- slide img -->
+            <img class="w-full" src="./Images/3.png" alt="Banner 3" />
+            <!-- slide content -->
+            <div
+              class="flex flex-col gap-4 bg-website-black p-8 rounded-2xl absolute bottom-8 right-8 max-w-[500px]"
+            >
+              <h2 class="text-white font-extrabold text-2xl">
+                Meet all the heroes from the field
+              </h2>
+              <p class="text-white/60 font-medium">
+                Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+                turpis placerat dolor. Purus urna in sit nullam proin.
+              </p>
+            </div>
+            <div
+              class="absolute flex gap-8 transform -translate-y-1/2 bottom-8 left-8"
+            >
+              <a
+                href="#slide2"
+                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                >❮</a
+              >
+              <a
+                href="#slide4"
+                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                >❯</a
+              >
+            </div>
+          </div>
+          <!-- slide 4 -->
+          <div id="slide1" class="carousel-item relative w-full rounded-2xl">
+            <!-- slide img -->
+            <img class="w-full" src="./Images/4.png" alt="Banner 4" />
+            <!-- slide content -->
+            <div
+              class="flex flex-col gap-4 bg-website-black p-8 rounded-2xl absolute bottom-8 right-8 max-w-[500px]"
+            >
+              <h2 class="text-white font-extrabold text-2xl">
+                Meet all the heroes from the field
+              </h2>
+              <p class="text-white/60 font-medium">
+                Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+                turpis placerat dolor. Purus urna in sit nullam proin.
+              </p>
+            </div>
+            <div
+              class="absolute flex gap-8 transform -translate-y-1/2 bottom-8 left-8"
+            >
+              <a
+                href="#slide3"
+                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                >❮</a
+              >
+              <a
+                href="#slide1"
+                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                >❯</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Banner End -->
   </body>
 </html>
