--- a/index.html
+++ b/index.html
@@ -185,133 +185,115 @@
     </header>
     <!-- Header Stop -->
     <!-- Banner Start -->
-    <section>
-      <div class="container">
-        <div class="carousel w-full h-[550px]">
+    <section class="mb-[100px]">
+      <div class="container relative">
+        <div class="carousel w-full h-[200px] md:h-[50vh] lg:h-[80vh]">
           <!-- slide 1 -->
           <div id="slide1" class="carousel-item relative w-full rounded-2xl">
             <!-- slide img -->
-            <img class="w-full" src="./Images/1.png" alt="Banner 1" />
-            <!-- slide content -->
+            <img
+              class="w-full object-cover"
+              src="./Images/1.png"
+              alt="Banner 1"
+            />
             <div
-              class="flex flex-col gap-4 bg-website-black p-8 rounded-2xl absolute bottom-8 right-8 max-w-[500px]"
-            >
-              <h2 class="text-white font-extrabold text-2xl">
-                Meet all the heroes from the field
-              </h2>
-              <p class="text-white/60 font-medium">
-                Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-                turpis placerat dolor. Purus urna in sit nullam proin.
-              </p>
-            </div>
-            <div
-              class="absolute flex gap-8 transform -translate-y-1/2 bottom-8 left-8"
+              class="absolute flex gap-8 -translate-x-1/2 md:translate-x-0 left-1/2 bottom-8 md:left-8"
             >
               <a
                 href="#slide4"
-                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                class="btn btn-circle bg-website-black text-white text-base md:text-xl lg:text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
                 >❮</a
               >
               <a
                 href="#slide2"
-                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                class="btn btn-circle bg-website-black text-white text-base md:text-xl lg:text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
                 >❯</a
               >
             </div>
           </div>
           <!-- slide 2 -->
-          <div id="slide1" class="carousel-item relative w-full rounded-2xl">
+          <div id="slide2" class="carousel-item relative w-full rounded-2xl">
             <!-- slide img -->
-            <img class="w-full" src="./Images/2.png" alt="Banner 2" />
-            <!-- slide content -->
+            <img
+              class="w-full object-cover"
+              src="./Images/2.png"
+              alt="Banner 2"
+            />
             <div
-              class="flex flex-col gap-4 bg-website-black p-8 rounded-2xl absolute bottom-8 right-8 max-w-[500px]"
-            >
-              <h2 class="text-white font-extrabold text-2xl">
-                Meet all the heroes from the field
-              </h2>
-              <p class="text-white/60 font-medium">
-                Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-                turpis placerat dolor. Purus urna in sit nullam proin.
-              </p>
-            </div>
-            <div
-              class="absolute flex gap-8 transform -translate-y-1/2 bottom-8 left-8"
+              class="absolute flex gap-8 -translate-x-1/2 md:translate-x-0 left-1/2 bottom-8 md:left-8"
             >
               <a
                 href="#slide1"
-                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                class="btn btn-circle bg-website-black text-white text-base md:text-xl lg:text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
                 >❮</a
               >
               <a
                 href="#slide3"
-                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                class="btn btn-circle bg-website-black text-white text-base md:text-xl lg:text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
                 >❯</a
               >
             </div>
           </div>
           <!-- slide 3 -->
-          <div id="slide1" class="carousel-item relative w-full rounded-2xl">
+          <div id="slide3" class="carousel-item relative w-full rounded-2xl">
             <!-- slide img -->
-            <img class="w-full" src="./Images/3.png" alt="Banner 3" />
-            <!-- slide content -->
+            <img
+              class="w-full object-cover"
+              src="./Images/3.png"
+              alt="Banner 3"
+            />
             <div
-              class="flex flex-col gap-4 bg-website-black p-8 rounded-2xl absolute bottom-8 right-8 max-w-[500px]"
-            >
-              <h2 class="text-white font-extrabold text-2xl">
-                Meet all the heroes from the field
-              </h2>
-              <p class="text-white/60 font-medium">
-                Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-                turpis placerat dolor. Purus urna in sit nullam proin.
-              </p>
-            </div>
-            <div
-              class="absolute flex gap-8 transform -translate-y-1/2 bottom-8 left-8"
+              class="absolute flex gap-8 -translate-x-1/2 md:translate-x-0 left-1/2 bottom-8 md:left-8"
             >
               <a
                 href="#slide2"
-                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                class="btn btn-circle bg-website-black text-white text-base md:text-xl lg:text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
                 >❮</a
               >
               <a
                 href="#slide4"
-                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                class="btn btn-circle bg-website-black text-white text-base md:text-xl lg:text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
                 >❯</a
               >
             </div>
           </div>
           <!-- slide 4 -->
-          <div id="slide1" class="carousel-item relative w-full rounded-2xl">
+          <div id="slide4" class="carousel-item relative w-full rounded-2xl">
             <!-- slide img -->
-            <img class="w-full" src="./Images/4.png" alt="Banner 4" />
-            <!-- slide content -->
+            <img
+              class="w-full object-cover"
+              src="./Images/4.png"
+              alt="Banner 4"
+            />
             <div
-              class="flex flex-col gap-4 bg-website-black p-8 rounded-2xl absolute bottom-8 right-8 max-w-[500px]"
-            >
-              <h2 class="text-white font-extrabold text-2xl">
-                Meet all the heroes from the field
-              </h2>
-              <p class="text-white/60 font-medium">
-                Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-                turpis placerat dolor. Purus urna in sit nullam proin.
-              </p>
-            </div>
-            <div
-              class="absolute flex gap-8 transform -translate-y-1/2 bottom-8 left-8"
+              class="absolute flex gap-8 -translate-x-1/2 md:translate-x-0 left-1/2 bottom-8 md:left-8"
             >
               <a
                 href="#slide3"
-                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                class="btn btn-circle bg-website-black text-white text-base md:text-xl lg:text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
                 >❮</a
               >
               <a
                 href="#slide1"
-                class="btn btn-circle bg-website-black text-white text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
+                class="btn btn-circle bg-website-black text-white text-base md:text-xl lg:text-2xl border-none transition-all duration-300 ease-in hover:bg-website-primary hover:text-black"
                 >❯</a
               >
             </div>
           </div>
+        </div>
+        <!-- slider content -->
+        <div
+          class="mt-4 lg:mt-0 flex flex-col gap-4 bg-website-black p-8 rounded-2xl static lg:absolute bottom-8 right-8 w-full lg:max-w-[500px]"
+        >
+          <h2
+            class="text-white font-extrabold text-[18px] md:text-xl lg:text-2xl"
+          >
+            Meet all the heroes from the field
+          </h2>
+          <p class="text-white/60 text-sm md:text-base font-medium">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
         </div>
       </div>
     </section>
