Professional Hockeys Complete

--- a/index.html
+++ b/index.html
@@ -61,12 +61,15 @@
                 dark2: "#424247",
                 gray: "rgba(255, 255, 255, 0.60)",
                 paragraph: "rgba(19, 19, 24, 0.60)",
+                border: "rgba(19, 19, 24, 0.20)",
               },
             },
           },
         },
       };
     </script>
+    <!-- custom css add -->
+    <link rel="stylesheet" href="./custom.css" />
   </head>
   <body class="font-manrope">
     <!-- Header Start -->
@@ -184,8 +187,9 @@
       </div>
     </header>
     <!-- Header Stop -->
+
     <!-- Banner Start -->
-    <section class="mb-[100px]">
+    <section class="mb-10 md:mb-14 lg:mb-[100px]">
       <div class="container relative">
         <div class="carousel w-full h-[200px] md:h-[50vh] lg:h-[80vh]">
           <!-- slide 1 -->
@@ -290,7 +294,7 @@
           >
             Meet all the heroes from the field
           </h2>
-          <p class="text-white/60 text-sm md:text-base font-medium">
+          <p class="text-website-gray text-sm md:text-base font-medium">
             Dit amet consectetur. Condimentum dignissim adipiscing aliquam
             turpis placerat dolor. Purus urna in sit nullam proin.
           </p>
@@ -298,5 +302,159 @@
       </div>
     </section>
     <!-- Banner End -->
+
+    <!-- Professional Hockeys Start -->
+    <section>
+      <!-- hockeys content -->
+      <div
+        class="container border-b border-t border-dashed border-website-border py-4 md:py-6 lg:py-8"
+      >
+        <div class="text-center w-full md:max-w-[600px] mx-auto">
+          <h1
+            class="text-website-black text-[22px] md:text-3xl lg:text-4xl font-extrabold mb-2 md:mb-4 lg:mb-6"
+          >
+            Professional Hockeys Club
+          </h1>
+          <p class="font-medium text-sm md:text-base text-website-paragraph">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+      </div>
+      <!-- hockeys percentage items -->
+      <div
+        class="mt-6 md:mt-8 lg:mt-12 container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 md:gap-7 lg:gap-8"
+      >
+        <div
+          class="flex flex-col justify-center items-center text-center gap-4"
+        >
+          <div
+            class="relative w-[120px] h-[120px] rounded-full flex justify-center items-center text-center before:content-[''] before:absolute before:bg-white before:rounded-full before:inset-[10px]"
+            style="
+              --i: 87%;
+              --clr: #ff4240;
+              background: conic-gradient(
+                from 0deg,
+                var(--clr) 0%,
+                var(--clr) 0%,
+                var(--i),
+                #ff4240,
+                var(--i),
+                #e7e7e8 100%
+              );
+            "
+          >
+            <h3
+              class="relative text-center text-website-black text-[28px] font-extrabold"
+            >
+              87<span class="text-[#FF4240]">%</span>
+            </h3>
+          </div>
+          <h3 class="text-website-black text-xl font-semibold">
+            Prayer Facility
+          </h3>
+          <p class="text-website-paragraph text-sm md:text-base">
+            Amet consectetur. Condimentum dignissim adipiscing .
+          </p>
+        </div>
+        <div
+          class="flex flex-col justify-center items-center text-center gap-4"
+        >
+          <div
+            class="relative w-[120px] h-[120px] rounded-full flex justify-center items-center text-center before:content-[''] before:absolute before:bg-white before:rounded-full before:inset-[10px]"
+            style="
+              --i: 95%;
+              --clr: #49d293;
+              background: conic-gradient(
+                from 0deg,
+                var(--clr) 0%,
+                var(--clr) 0%,
+                var(--i),
+                #49d293,
+                var(--i),
+                #e7e7e8 100%
+              );
+            "
+          >
+            <h3
+              class="relative text-center text-website-black text-[28px] font-extrabold"
+            >
+              95<span class="text-[#49D293]">%</span>
+            </h3>
+          </div>
+          <h3 class="text-website-black text-xl font-semibold">
+            Prayer Facility
+          </h3>
+          <p class="text-website-paragraph text-sm md:text-base">
+            Amet consectetur. Condimentum dignissim adipiscing .
+          </p>
+        </div>
+        <div
+          class="flex flex-col justify-center items-center text-center gap-4"
+        >
+          <div
+            class="relative w-[120px] h-[120px] rounded-full flex justify-center items-center text-center before:content-[''] before:absolute before:bg-white before:rounded-full before:inset-[10px]"
+            style="
+              --i: 90%;
+              --clr: #ffb546;
+              background: conic-gradient(
+                from 0deg,
+                var(--clr) 0%,
+                var(--clr) 0%,
+                var(--i),
+                #ffb546,
+                var(--i),
+                #e7e7e8 100%
+              );
+            "
+          >
+            <h3
+              class="relative text-center text-website-black text-[28px] font-extrabold"
+            >
+              90<span class="text-[#FFB546]">%</span>
+            </h3>
+          </div>
+          <h3 class="text-website-black text-xl font-semibold">
+            Prayer Facility
+          </h3>
+          <p class="text-website-paragraph text-sm md:text-base">
+            Amet consectetur. Condimentum dignissim adipiscing .
+          </p>
+        </div>
+        <div
+          class="flex flex-col justify-center items-center text-center gap-4"
+        >
+          <div
+            class="relative w-[120px] h-[120px] rounded-full flex justify-center items-center text-center before:content-[''] before:absolute before:bg-white before:rounded-full before:inset-[10px]"
+            style="
+              --i: 80%;
+              --clr: #4c8df1;
+              background: conic-gradient(
+                from 0deg,
+                var(--clr) 0%,
+                var(--clr) 0%,
+                var(--i),
+                #4c8df1,
+                var(--i),
+                #e7e7e8 100%
+              );
+            "
+          >
+            <h3
+              class="relative text-center text-website-black text-[28px] font-extrabold"
+            >
+              80<span class="text-[#4C8DF1]">%</span>
+            </h3>
+          </div>
+          <h3 class="text-website-black text-xl font-semibold">
+            Prayer Facility
+          </h3>
+          <p class="text-website-paragraph text-sm md:text-base">
+            Amet consectetur. Condimentum dignissim adipiscing .
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Professional Hockeys End -->
   </body>
 </html>
