--- a/index.html
+++ b/index.html
@@ -68,8 +68,6 @@
         },
       };
     </script>
-    <!-- custom css add -->
-    <link rel="stylesheet" href="./custom.css" />
   </head>
   <body class="font-manrope">
     <!-- Header Start -->
@@ -189,7 +187,7 @@
     <!-- Header Stop -->
 
     <!-- Banner Start -->
-    <section class="mb-10 md:mb-14 lg:mb-[100px]">
+    <section>
       <div class="container relative">
         <div class="carousel w-full h-[200px] md:h-[50vh] lg:h-[80vh]">
           <!-- slide 1 -->
@@ -304,7 +302,7 @@
     <!-- Banner End -->
 
     <!-- Professional Hockeys Start -->
-    <section>
+    <section class="my-10 md:my-14 lg:my-[100px]">
       <!-- hockeys content -->
       <div
         class="container border-b border-t border-dashed border-website-border py-4 md:py-6 lg:py-8"
@@ -456,5 +454,117 @@
       </div>
     </section>
     <!-- Professional Hockeys End -->
+
+    <!-- Program -->
+    <section class="my-10 md:my-14 lg:my-[100px]">
+      <div class="container">
+        <!-- program content -->
+        <div
+          class="border-b border-t border-dashed border-website-border py-4 md:py-6 lg:py-8"
+        >
+          <div class="text-center w-full md:max-w-[600px] mx-auto">
+            <h1
+              class="text-website-black text-[22px] md:text-3xl lg:text-4xl font-extrabold mb-2 md:mb-4 lg:mb-6"
+            >
+              Program Sections
+            </h1>
+            <p class="font-medium text-sm md:text-base text-website-paragraph">
+              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+              turpis placerat dolor. Purus urna in sit nullam proin.
+            </p>
+          </div>
+        </div>
+
+        <!-- program items -->
+        <div
+          class="mt-6 md:mt-8 lg:mt-12 grid grid-cols-1 md:grid-cols-2 gap-6"
+        >
+          <div
+            class="relative rounded-xl overflow-hidden h-[250px] md:min-h-[340px]"
+          >
+            <!-- program img -->
+            <img
+              class="w-full h-full object-cover"
+              src="./Images/2.png"
+              alt="program1"
+            />
+            <!-- program content -->
+            <div
+              class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full h-full bg-[#13131880]/50 p-6 md:p-9 flex flex-col justify-center md:justify-end gap-4 text-white"
+            >
+              <h2 class="text-xl md:text-2xl lg:text-[28px] font-extrabold">
+                Junior Program
+              </h2>
+              <p class="text-sm md:text-base font-medium">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <button
+                class="mr-auto text-white font-bold text-[18px] md:text-xl px-4 md:px-5 lg:px-6 py-2 md:py-3 lg:py-4 rounded-lg bg-website-primary border border-transparent transiti duration-300 ease-in hover:text-black hover:bg-transparent hover:border-website-primary"
+              >
+                Register Now!
+              </button>
+            </div>
+          </div>
+          <div
+            class="relative rounded-xl overflow-hidden h-[250px] md:min-h-[340px]"
+          >
+            <!-- program img -->
+            <img
+              class="w-full h-full object-cover"
+              src="./Images/3.png"
+              alt="program2"
+            />
+            <!-- program content -->
+            <div
+              class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full h-full bg-[#13131880]/50 p-6 md:p-9 flex flex-col justify-center md:justify-end gap-4 text-white"
+            >
+              <h2 class="text-xl md:text-2xl lg:text-[28px] font-extrabold">
+                Teenager Program
+              </h2>
+              <p class="text-sm md:text-base font-medium">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <button
+                class="mr-auto text-white font-bold text-[18px] md:text-xl px-4 md:px-5 lg:px-6 py-2 md:py-3 lg:py-4 rounded-lg bg-website-primary border border-transparent transiti duration-300 ease-in hover:text-black hover:bg-transparent hover:border-website-primary"
+              >
+                Register Now!
+              </button>
+            </div>
+          </div>
+          <div
+            class="md:col-span-2 relative rounded-xl overflow-hidden h-[250px] md:min-h-[340px] md:max-h-[450px]"
+          >
+            <!-- program img -->
+            <img
+              class="w-full h-full object-cover"
+              src="./Images/4.png"
+              alt="program3"
+            />
+            <!-- program content -->
+            <div
+              class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full h-full bg-[#13131880]/50 p-6 md:p-9 flex flex-col justify-center md:justify-end gap-4 text-white"
+            >
+              <h2 class="text-xl md:text-2xl lg:text-[28px] font-extrabold">
+                Teenager Program
+              </h2>
+              <p class="text-sm md:text-base font-medium md:max-w-[570px]">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <button
+                class="mr-auto text-white font-bold text-[18px] md:text-xl px-4 md:px-5 lg:px-6 py-2 md:py-3 lg:py-4 rounded-lg bg-website-primary border border-transparent transiti duration-300 ease-in hover:text-black hover:bg-transparent hover:border-website-primary"
+              >
+                Register Now!
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
