--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 black: "#131318",
                 dark2: "#424247",
                 gray: "rgba(255, 255, 255, 0.60)",
+                shop: "rgba(19, 19, 24, 0.50)",
                 paragraph: "rgba(19, 19, 24, 0.60)",
                 border: "rgba(19, 19, 24, 0.20)",
               },
@@ -561,6 +562,256 @@
               >
                 Register Now!
               </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- New Product -->
+    <section class="my-10 md:my-14 lg:my-[100px]">
+      <div class="container">
+        <!-- new product content -->
+        <div
+          class="border-b border-t border-dashed border-website-border py-4 md:py-6 lg:py-8"
+        >
+          <div class="text-center w-full md:max-w-[600px] mx-auto">
+            <h1
+              class="text-website-black text-[22px] md:text-3xl lg:text-4xl font-extrabold mb-2 md:mb-4 lg:mb-6"
+            >
+              Our New Products
+            </h1>
+            <p class="font-medium text-sm md:text-base text-website-paragraph">
+              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+              turpis placerat dolor. Purus urna in sit nullam proin.
+            </p>
+          </div>
+        </div>
+
+        <!-- new product items -->
+        <div
+          class="mt-6 md:mt-8 lg:mt-12 grid grid-cols-1 lg:grid-cols-2 gap-6"
+        >
+          <div
+            class="p-6 rounded-xl border border-website-border flex flex-col md:flex-row justify-normal md:justify-between items-center gap-5"
+          >
+            <img
+              class="w-full md:max-w-[250px] lg:max-w-[180px] lg:h-[170px] h-auto object-cover rounded-xl"
+              src="./Images/5.png"
+              alt="product 1"
+            />
+            <div class="flex flex-col w-full gap-3">
+              <h3
+                class="font-medium text-base text-website-shop flex justify-start gap-4"
+              >
+                <span class="flex items-center gap-2"
+                  ><i class="text-xl text-[#F99808] ri-star-fill"></i>5.0</span
+                ><span class="flex items-center gap-2"
+                  ><i class="text-xl text-website-shop ri-eye-line"></i>20</span
+                ><span class="flex items-center gap-2"
+                  ><i class="text-xl text-website-shop ri-heart-line"></i
+                  >200</span
+                >
+              </h3>
+              <h2 class="text-xl font-extrabold text-website-black">
+                World Cup Flags Football
+              </h2>
+              <p class="text-website-paragraph font-medium">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex flex-col md:flex-row gap-1 md:gap-2">
+                <h4 class="text-[18px] font-extrabold text-website-primary">
+                  Price - $22.00
+                </h4>
+                <h4 class="font-medium text-website-shop text-base">
+                  <i class="mr-2 ri-shopping-cart-line"></i>Delivery Fee : Free
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="p-6 rounded-xl border border-website-border flex flex-col md:flex-row justify-normal md:justify-between items-center gap-5"
+          >
+            <img
+              class="w-full md:max-w-[250px] lg:max-w-[180px] lg:h-[170px] h-auto object-cover rounded-xl"
+              src="./Images/6.png"
+              alt="product 2"
+            />
+            <div class="flex flex-col w-full gap-3">
+              <h3
+                class="font-medium text-base text-website-shop flex justify-start gap-4"
+              >
+                <span class="flex items-center gap-2"
+                  ><i class="text-xl text-[#F99808] ri-star-fill"></i>5.0</span
+                ><span class="flex items-center gap-2"
+                  ><i class="text-xl text-website-shop ri-eye-line"></i>20</span
+                ><span class="flex items-center gap-2"
+                  ><i class="text-xl text-website-shop ri-heart-line"></i
+                  >200</span
+                >
+              </h3>
+              <h2 class="text-xl font-extrabold text-website-black">
+                World Cup Flags Football
+              </h2>
+              <p class="text-website-paragraph font-medium">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex flex-col md:flex-row gap-1 md:gap-2">
+                <h4 class="text-[18px] font-extrabold text-website-primary">
+                  Price - $22.00
+                </h4>
+                <h4 class="font-medium text-website-shop text-base">
+                  <i class="mr-2 ri-shopping-cart-line"></i>Delivery Fee : Free
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="p-6 rounded-xl border border-website-border flex flex-col md:flex-row justify-normal md:justify-between items-center gap-5"
+          >
+            <img
+              class="w-full md:max-w-[250px] lg:max-w-[180px] lg:h-[170px] h-auto object-cover rounded-xl"
+              src="./Images/7.png"
+              alt="product 3"
+            />
+            <div class="flex flex-col w-full gap-3">
+              <h3
+                class="font-medium text-base text-website-shop flex justify-start gap-4"
+              >
+                <span class="flex items-center gap-2"
+                  ><i class="text-xl text-[#F99808] ri-star-fill"></i>5.0</span
+                ><span class="flex items-center gap-2"
+                  ><i class="text-xl text-website-shop ri-eye-line"></i>20</span
+                ><span class="flex items-center gap-2"
+                  ><i class="text-xl text-website-shop ri-heart-line"></i
+                  >200</span
+                >
+              </h3>
+              <h2 class="text-xl font-extrabold text-website-black">
+                World Cup Flags Football
+              </h2>
+              <p class="text-website-paragraph font-medium">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex flex-col md:flex-row gap-1 md:gap-2">
+                <h4 class="text-[18px] font-extrabold text-website-primary">
+                  Price - $22.00
+                </h4>
+                <h4 class="font-medium text-website-shop text-base">
+                  <i class="mr-2 ri-shopping-cart-line"></i>Delivery Fee : Free
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="p-6 rounded-xl border border-website-border flex flex-col md:flex-row justify-normal md:justify-between items-center gap-5"
+          >
+            <img
+              class="w-full md:max-w-[250px] lg:max-w-[180px] lg:h-[170px] h-auto object-cover rounded-xl"
+              src="./Images/8.png"
+              alt="product 4"
+            />
+            <div class="flex flex-col w-full gap-3">
+              <h3
+                class="font-medium text-base text-website-shop flex justify-start gap-4"
+              >
+                <span class="flex items-center gap-2"
+                  ><i class="text-xl text-[#F99808] ri-star-fill"></i>5.0</span
+                ><span class="flex items-center gap-2"
+                  ><i class="text-xl text-website-shop ri-eye-line"></i>20</span
+                ><span class="flex items-center gap-2"
+                  ><i class="text-xl text-website-shop ri-heart-line"></i
+                  >200</span
+                >
+              </h3>
+              <h2 class="text-xl font-extrabold text-website-black">
+                World Cup Flags Football
+              </h2>
+              <p class="text-website-paragraph font-medium">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex flex-col md:flex-row gap-1 md:gap-2">
+                <h4 class="text-[18px] font-extrabold text-website-primary">
+                  Price - $22.00
+                </h4>
+                <h4 class="font-medium text-website-shop text-base">
+                  <i class="mr-2 ri-shopping-cart-line"></i>Delivery Fee : Free
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="p-6 rounded-xl border border-website-border flex flex-col md:flex-row justify-normal md:justify-between items-center gap-5"
+          >
+            <img
+              class="w-full md:max-w-[250px] lg:max-w-[180px] lg:h-[170px] h-auto object-cover rounded-xl"
+              src="./Images/9.png"
+              alt="product 5"
+            />
+            <div class="flex flex-col w-full gap-3">
+              <h3
+                class="font-medium text-base text-website-shop flex justify-start gap-4"
+              >
+                <span class="flex items-center gap-2"
+                  ><i class="text-xl text-[#F99808] ri-star-fill"></i>5.0</span
+                ><span class="flex items-center gap-2"
+                  ><i class="text-xl text-website-shop ri-eye-line"></i>20</span
+                ><span class="flex items-center gap-2"
+                  ><i class="text-xl text-website-shop ri-heart-line"></i
+                  >200</span
+                >
+              </h3>
+              <h2 class="text-xl font-extrabold text-website-black">
+                World Cup Flags Football
+              </h2>
+              <p class="text-website-paragraph font-medium">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex flex-col md:flex-row gap-1 md:gap-2">
+                <h4 class="text-[18px] font-extrabold text-website-primary">
+                  Price - $22.00
+                </h4>
+                <h4 class="font-medium text-website-shop text-base">
+                  <i class="mr-2 ri-shopping-cart-line"></i>Delivery Fee : Free
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="p-6 rounded-xl border border-website-border flex flex-col md:flex-row justify-normal md:justify-between items-center gap-5"
+          >
+            <img
+              class="w-full md:max-w-[250px] lg:max-w-[180px] lg:h-[170px] h-auto object-cover rounded-xl"
+              src="./Images/10.png"
+              alt="product 6"
+            />
+            <div class="flex flex-col w-full gap-3">
+              <h3
+                class="font-medium text-base text-website-shop flex justify-start gap-4"
+              >
+                <span class="flex items-center gap-2"
+                  ><i class="text-xl text-[#F99808] ri-star-fill"></i>5.0</span
+                ><span class="flex items-center gap-2"
+                  ><i class="text-xl text-website-shop ri-eye-line"></i>20</span
+                ><span class="flex items-center gap-2"
+                  ><i class="text-xl text-website-shop ri-heart-line"></i
+                  >200</span
+                >
+              </h3>
+              <h2 class="text-xl font-extrabold text-website-black">
+                World Cup Flags Football
+              </h2>
+              <p class="text-website-paragraph font-medium">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex flex-col md:flex-row gap-1 md:gap-2">
+                <h4 class="text-[18px] font-extrabold text-website-primary">
+                  Price - $22.00
+                </h4>
+                <h4 class="font-medium text-website-shop text-base">
+                  <i class="mr-2 ri-shopping-cart-line"></i>Delivery Fee : Free
+                </h4>
+              </div>
             </div>
           </div>
         </div>
