--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
       </div>
     </section>
 
-    <!-- New Product -->
+    <!-- New Product Start -->
     <section class="my-10 md:my-14 lg:my-[100px]">
       <div class="container">
         <!-- new product content -->
@@ -817,5 +817,129 @@
         </div>
       </div>
     </section>
+    <!-- New Product End -->
+
+    <!-- Clients Questions Start -->
+    <section class="my-10 md:my-14 lg:my-[100px]">
+      <div class="container">
+        <!-- clients question content -->
+        <div
+          class="border-b border-t border-dashed border-website-border py-4 md:py-6 lg:py-8"
+        >
+          <div class="text-center w-full md:max-w-[600px] mx-auto">
+            <h1
+              class="text-website-black text-[22px] md:text-3xl lg:text-4xl font-extrabold mb-2 md:mb-4 lg:mb-6"
+            >
+              Clients Question
+            </h1>
+            <p class="font-medium text-sm md:text-base text-website-paragraph">
+              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+              turpis placerat dolor. Purus urna in sit nullam proin.
+            </p>
+          </div>
+        </div>
+        <!-- clients question img and accordion -->
+        <div
+          class="mt-6 md:mt-8 lg:mt-12 p-6 rounded-xl border border-website-border flex flex-col lg:flex-row justify-between items-center gap-5 lg:gap-10"
+        >
+          <!-- clients question img -->
+          <img
+            class="lg:basis-[40%] w-full h-[300px] md:h-[400px] lg:h-auto object-center lg:object-cover"
+            src="./Images/11.png"
+            alt="clients question"
+          />
+          <!-- clients question accordion -->
+          <div class="lg:basis-[60%]">
+            <div class="join join-vertical w-full rounded-none">
+              <div
+                class="collapse collapse-plus join-item border-b border-website-border"
+              >
+                <input type="radio" name="my-accordion-4" checked="checked" />
+                <h2 class="collapse-title text-xl font-bold">Our Equipment</h2>
+                <div class="collapse-content">
+                  <p
+                    class="w-[90%] text-sm md:text-base text-website-paragraph"
+                  >
+                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                    elit enim sagittis turpis in magna.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="collapse collapse-plus join-item border-b border-website-border"
+              >
+                <input type="radio" name="my-accordion-4" />
+                <h2 class="collapse-title text-xl font-bold">Our Equipment</h2>
+                <div class="collapse-content">
+                  <p
+                    class="w-[90%] text-sm md:text-base text-website-paragraph"
+                  >
+                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                    elit enim sagittis turpis in magna.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="collapse collapse-plus join-item border-b border-website-border"
+              >
+                <input type="radio" name="my-accordion-4" />
+                <h2 class="collapse-title text-xl font-bold">
+                  Private Lessons
+                </h2>
+                <div class="collapse-content">
+                  <p
+                    class="w-[90%] text-sm md:text-base text-website-paragraph"
+                  >
+                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                    elit enim sagittis turpis in magna.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="collapse collapse-plus join-item border-b border-website-border"
+              >
+                <input type="radio" name="my-accordion-4" />
+                <h2 class="collapse-title text-xl font-bold">Ski Touring</h2>
+                <div class="collapse-content">
+                  <p
+                    class="w-[90%] text-sm md:text-base text-website-paragraph"
+                  >
+                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                    elit enim sagittis turpis in magna.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="collapse collapse-plus join-item border-b border-website-border"
+              >
+                <input type="radio" name="my-accordion-4" />
+                <h2 class="collapse-title text-xl font-bold">Booking</h2>
+                <div class="collapse-content">
+                  <p
+                    class="w-[90%] text-sm md:text-base text-website-paragraph"
+                  >
+                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                    elit enim sagittis turpis in magna.
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus join-item">
+                <input type="radio" name="my-accordion-4" />
+                <h2 class="collapse-title text-xl font-bold">Pricings</h2>
+                <div class="collapse-content">
+                  <p
+                    class="w-[90%] text-sm md:text-base text-website-paragraph"
+                  >
+                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                    elit enim sagittis turpis in magna.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Clients Questions End -->
   </body>
 </html>
