--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
                 shop: "rgba(19, 19, 24, 0.50)",
                 paragraph: "rgba(19, 19, 24, 0.60)",
                 border: "rgba(19, 19, 24, 0.20)",
+                input: "rgba(19, 19, 24, 0.30)",
+                inputbg: "rgba(19, 19, 24, 0.03)",
               },
             },
           },
@@ -941,5 +943,171 @@
       </div>
     </section>
     <!-- Clients Questions End -->
+
+    <!-- Get In Touch Start -->
+    <section class="my-10 md:my-14 lg:my-[100px]">
+      <div class="container">
+        <!-- get in touch content -->
+        <div
+          class="border-b border-t border-dashed border-website-border py-4 md:py-6 lg:py-8"
+        >
+          <div class="text-center w-full md:max-w-[600px] mx-auto">
+            <h1
+              class="text-website-black text-[22px] md:text-3xl lg:text-4xl font-extrabold mb-2 md:mb-4 lg:mb-6"
+            >
+              Get In Touch
+            </h1>
+            <p class="font-medium text-sm md:text-base text-website-paragraph">
+              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+              turpis placerat dolor. Purus urna in sit nullam proin.
+            </p>
+          </div>
+        </div>
+
+        <!-- get in touch address and form -->
+        <div
+          class="mt-6 md:mt-8 lg:mt-12 flex flex-col lg:flex-row justify-between gap-6"
+        >
+          <!-- get in touch address -->
+          <div
+            class="lg:basis-[30%] p-12 rounded-xl border border-website-border flex flex-col md:flex-row lg:flex-col md:flex-wrap md:justify-center lg:justify-normal gap-6"
+          >
+            <div class="flex flex-col gap-6 p-8 bg-[#BCED6D1A] rounded-xl">
+              <img
+                class="w-12 h-12 object-cover"
+                src="./Images/phone.png"
+                alt="phone"
+              />
+              <div class="">
+                <address class="not-italic">
+                  <p class="text-website-paragraph">Phone Number :</p>
+                  <p class="font-extrabold text-[18px] text-website-black">
+                    (+880) 1716059182
+                  </p>
+                </address>
+              </div>
+            </div>
+            <div class="flex flex-col gap-6 p-8 bg-[#FDDD5F1A] rounded-xl">
+              <img
+                class="w-12 h-12 object-cover"
+                src="./Images/email.png"
+                alt="email"
+              />
+              <div class="">
+                <address class="not-italic">
+                  <p class="text-website-paragraph">Email :</p>
+                  <p
+                    class="font-extrabold text-[18px] text-website-black break-words"
+                  >
+                    dreammehedihassan@gmail.com
+                  </p>
+                </address>
+              </div>
+            </div>
+            <div class="flex flex-col gap-6 p-8 bg-[#629CF31A] rounded-xl">
+              <img
+                class="w-12 h-12 object-cover"
+                src="./Images/location.png"
+                alt="location"
+              />
+              <div class="">
+                <address class="not-italic">
+                  <p class="text-website-paragraph">Location :</p>
+                  <p class="font-extrabold text-[18px] text-website-black">
+                    Mirzapur, Tangail, Dhaka, Bangladesh
+                  </p>
+                </address>
+              </div>
+            </div>
+          </div>
+          <!-- get in touch form -->
+          <form class="lg:basis-[70%] grid grid-cols-1 md:grid-cols-2 gap-6">
+            <!-- name -->
+            <div class="flex flex-col gap-4">
+              <label class="text-xl font-bold text-website-black" for="name"
+                >Your Name</label
+              >
+              <input
+                class="text-base text-website-input outline-none p-5 rounded-xl bg-website-inputbg placeholder:text-website-input placeholder:font-manrope"
+                type="text"
+                name="name"
+                id="name"
+                placeholder="Enter your full name"
+                required
+              />
+            </div>
+            <!-- email -->
+            <div class="flex flex-col gap-4">
+              <label class="text-xl font-bold text-website-black" for="email"
+                >Your Email</label
+              >
+              <input
+                class="text-base text-website-input outline-none p-5 rounded-xl bg-website-inputbg placeholder:text-website-input placeholder:font-manrope"
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Enter your email"
+                required
+              />
+            </div>
+            <!-- subject -->
+            <div class="flex flex-col gap-4">
+              <label class="text-xl font-bold text-website-black" for="subject"
+                >Subject</label
+              >
+              <input
+                class="text-base text-website-input outline-none p-5 rounded-xl bg-website-inputbg placeholder:text-website-input placeholder:font-manrope"
+                type="text"
+                name="subject"
+                id="subject"
+                placeholder="Enter your subject"
+                required
+              />
+            </div>
+            <!-- number -->
+            <div class="flex flex-col gap-4">
+              <label class="text-xl font-bold text-website-black" for="number"
+                >Phone Number</label
+              >
+              <input
+                class="text-base text-website-input outline-none p-5 rounded-xl bg-website-inputbg placeholder:text-website-input placeholder:font-manrope"
+                type="number"
+                name="number"
+                id="number"
+                placeholder="Enter your number"
+                required
+              />
+            </div>
+            <!-- message -->
+            <div class="md:col-span-2">
+              <div class="flex flex-col gap-4">
+                <label
+                  class="text-xl font-bold text-website-black"
+                  for="message"
+                  >Message</label
+                >
+                <textarea
+                  class="text-base text-website-input outline-none p-5 rounded-xl bg-website-inputbg placeholder:text-website-input placeholder:font-manrope"
+                  name="message"
+                  id="message"
+                  cols="30"
+                  rows="15"
+                  placeholder="Write your message"
+                  required
+                ></textarea>
+              </div>
+            </div>
+            <!-- button -->
+            <button
+              class="md:col-span-2 text-white font-bold text-[18px] md:text-xl px-4 md:px-5 lg:px-6 py-2 md:py-3 lg:py-4 rounded-lg bg-website-primary border border-transparent transiti duration-300 ease-in hover:text-black hover:bg-transparent hover:border-website-primary"
+              type="submit"
+            >
+              Send Message
+            </button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- Get In Touch End -->
   </body>
 </html>
