--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <!-- logo -->
             <a
-              class="text-website-black font-extrabold text-2xl md:text-3xl lg:text-4xl"
+              class="text-website-black font-extrabold text-2xl lg:text-4xl"
               href="#"
               >Hockey<span class="text-website-primary">’</span>s</a
             >
@@ -192,12 +192,14 @@
     <!-- Banner Start -->
     <section>
       <div class="container relative">
-        <div class="carousel w-full h-[200px] md:h-[50vh] lg:h-[80vh]">
+        <div
+          class="carousel w-full h-[200px] md:h-[50vh] lg:h-[80vh] max-h-[900px]"
+        >
           <!-- slide 1 -->
           <div id="slide1" class="carousel-item relative w-full rounded-2xl">
             <!-- slide img -->
             <img
-              class="w-full object-cover"
+              class="w-full object-cover rounded-xl"
               src="./Images/1.png"
               alt="Banner 1"
             />
@@ -217,10 +219,10 @@
             </div>
           </div>
           <!-- slide 2 -->
-          <div id="slide2" class="carousel-item relative w-full rounded-2xl">
+          <div id="slide2" class="carousel-item relative w-full rounded-xl">
             <!-- slide img -->
             <img
-              class="w-full object-cover"
+              class="w-full object-cover rounded-xl"
               src="./Images/2.png"
               alt="Banner 2"
             />
@@ -240,10 +242,10 @@
             </div>
           </div>
           <!-- slide 3 -->
-          <div id="slide3" class="carousel-item relative w-full rounded-2xl">
+          <div id="slide3" class="carousel-item relative w-full rounded-xl">
             <!-- slide img -->
             <img
-              class="w-full object-cover"
+              class="w-full object-cover rounded-xl"
               src="./Images/3.png"
               alt="Banner 3"
             />
@@ -263,10 +265,10 @@
             </div>
           </div>
           <!-- slide 4 -->
-          <div id="slide4" class="carousel-item relative w-full rounded-2xl">
+          <div id="slide4" class="carousel-item relative w-full rounded-xl">
             <!-- slide img -->
             <img
-              class="w-full object-cover"
+              class="w-full object-cover rounded-xl"
               src="./Images/4.png"
               alt="Banner 4"
             />
@@ -1109,5 +1111,57 @@
       </div>
     </section>
     <!-- Get In Touch End -->
+
+    <!-- Social Media Start -->
+    <section>
+      <div class="container bg-[#13131808] rounded-xl">
+        <!-- social media link -->
+        <div class="mb-10 md:mb-12 lg:mb-[100px] py-4 md:py-6 lg:py-8">
+          <div class="text-center w-full md:max-w-[600px] mx-auto">
+            <h1
+              class="text-website-black text-xl md:text-2xl font-extrabold mb-2 md:mb-4"
+            >
+              Social Media
+            </h1>
+            <!-- social menu icon -->
+            <ul class="flex justify-center items-center gap-4">
+              <li>
+                <a
+                  class="text-2xl transition-all duration-300 ease-in hover:text-website-primary text-website-black"
+                  target="_blank"
+                  href="https://twitter.com/"
+                  ><i class="ri-twitter-fill"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  class="text-2xl transition-all duration-300 ease-in hover:text-website-primary text-website-black"
+                  target="_blank"
+                  href="https://www.facebook.com/profile.php?id=61554869056271"
+                  ><i class="ri-facebook-fill"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  class="text-2xl transition-all duration-300 ease-in hover:text-website-primary text-website-black"
+                  target="_blank"
+                  href="https://www.instagram.com/"
+                  ><i class="ri-instagram-fill"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  class="text-2xl transition-all duration-300 ease-in hover:text-website-primary text-website-black"
+                  target="_blank"
+                  href="https://github.com/dreammehedi"
+                  ><i class="ri-github-fill"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Social Media End -->
   </body>
 </html>
