--- a/index.html
+++ b/index.html
@@ -1163,5 +1163,159 @@
       </div>
     </section>
     <!-- Social Media End -->
+
+    <!-- Footer Start -->
+    <footer
+      class="py-10 md:py-14 lg:py-[100px] bg-website-black text-website-gray"
+    >
+      <div class="container">
+        <div
+          class="grid grid-cols-2 lg:grid-cols-5 text-center md:text-left justify-center md:justify-between gap-10"
+        >
+          <!-- get in touch -->
+          <div
+            class="col-span-2 md:col-span-1 lg:col-span-2 mx-auto md:m-0 flex flex-col gap-4"
+          >
+            <h2 class="text-[28px] font-extrabold text-white">Get In Touch</h2>
+            <p class="text-website-gray max-w-md">
+              Dit amet consectetur. Condimentum adipiscing aliquam turpis
+              placerat dolor. Purus urna in sit nullam proin.
+            </p>
+            <address
+              class="text-center md:text-left flex flex-col items-center md:items-start not-italic text-white"
+            >
+              <p class="flex items-center gap-4 text-base">
+                <i class="text-2xl text-website-primary ri-mail-line"></i
+                >dreammehedihassan@gmail.com
+              </p>
+              <p class="flex items-center gap-4 text-base">
+                <i class="text-2xl text-website-primary ri-phone-fill"></i
+                >(+880) 1716059182
+              </p>
+            </address>
+          </div>
+          <!-- company -->
+          <div>
+            <h2 class="text-[18px] mb-7 font-bold text-white">Company</h2>
+            <!-- company menu -->
+            <ul class="flex flex-col gap-3">
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >About us</a
+                >
+              </li>
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >Leadership
+                </a>
+              </li>
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >Careers
+                </a>
+              </li>
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >News & Article</a
+                >
+              </li>
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >Legal Notice</a
+                >
+              </li>
+            </ul>
+          </div>
+          <!-- Support -->
+          <div>
+            <h2 class="text-[18px] mb-7 font-bold text-white">Support</h2>
+            <!-- Support menu -->
+            <ul class="flex flex-col gap-3">
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >Help Center</a
+                >
+              </li>
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >FAQ
+                </a>
+              </li>
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >Ticket Support
+                </a>
+              </li>
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >Contact Us</a
+                >
+              </li>
+            </ul>
+          </div>
+          <!-- Services -->
+          <div class="col-span-2 md:col-span-1 mx-auto md:m-0">
+            <h2 class="text-[18px] mb-7 font-bold text-white">Services</h2>
+            <!-- Services menu -->
+            <ul class="flex flex-col gap-3">
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >Academy</a
+                >
+              </li>
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >Group Lesson
+                </a>
+              </li>
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >Private Lesson
+                </a>
+              </li>
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >Hockeys for kids</a
+                >
+              </li>
+              <li>
+                <a
+                  class="transition-all duration-300 ease-in hover:text-website-primary hover:ml-1"
+                  href="#"
+                  >Hockeys for Adult</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer End -->
   </body>
 </html>
