My Assignment is Fully Complete

--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
         </div>
         <!-- clients question img and accordion -->
         <div
-          class="mt-6 md:mt-8 lg:mt-12 p-6 rounded-xl border border-website-border flex flex-col lg:flex-row justify-between items-center gap-5 lg:gap-10"
+          class="mt-6 md:mt-8 lg:mt-12 p-4 md:p-6 rounded-xl border border-website-border flex flex-col lg:flex-row justify-between items-center gap-5 lg:gap-10"
         >
           <!-- clients question img -->
           <img
@@ -1010,7 +1010,7 @@
         >
           <!-- get in touch address -->
           <div
-            class="lg:basis-[30%] p-12 rounded-xl border border-website-border flex flex-col md:flex-row lg:flex-col md:flex-wrap md:justify-center lg:justify-normal gap-6"
+            class="lg:basis-[30%] p-6 md:p-8 lg:p-12 rounded-xl border border-website-border flex flex-col md:flex-row lg:flex-col md:flex-wrap md:justify-center lg:justify-normal gap-6"
           >
             <div class="flex flex-col gap-6 p-8 bg-[#BCED6D1A] rounded-xl">
               <img
